--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -126,7 +126,7 @@
         <owlapi.version>5.1.17</owlapi.version>
 
         <ontop.version>4.3.0-2</ontop.version>
-        <sparqlify.version>0.9.8-SNAPSHOT</sparqlify.version>
+        <sparqlify.version>0.9.8</sparqlify.version>
 
         <guava.version>32.1.3-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
