--- a/sansa-ml/sansa-ml-spark/pom.xml
+++ b/sansa-ml/sansa-ml-spark/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.sansa-stack</groupId>
         <artifactId>sansa-ml-parent_2.12</artifactId>
-        <version>0.9.5</version>
+        <version>0.9.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>sansa-ml-spark_2.12</artifactId>
