--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -103,10 +103,10 @@
         <!-- <log4j.version>2.21.0</log4j.version> -->
 
         <!-- Our util projects (mainly maintained by Claus) -->
-        <aksw.commons.version>0.9.8</aksw.commons.version>
-        <jena.version>5.0.0</jena.version>
-        <jenax.version>5.0.0-1</jenax.version>
-        <rmltk.version>5.0.0-1</rmltk.version>
+        <aksw.commons.version>0.9.9-SNAPSHOT</aksw.commons.version>
+        <jena.version>5.1.0-SNAPSHOT</jena.version>
+        <jenax.version>5.1.0-1-SNAPSHOT</jenax.version>
+        <rmltk.version>5.1.0-1-SNAPSHOT</rmltk.version>
 
         <rdf4j.version>3.3.0</rdf4j.version>
 
@@ -126,7 +126,7 @@
         <owlapi.version>5.1.17</owlapi.version>
 
         <ontop.version>4.3.0-2</ontop.version>
-        <sparqlify.version>0.9.8</sparqlify.version>
+        <sparqlify.version>0.9.9-SNAPSHOT</sparqlify.version>
 
         <guava.version>32.1.3-jre</guava.version>
         <!--        <guava.version>14.0.1</guava.version>-->
