--- a/sansa-hadoop-jena/pom.xml
+++ b/sansa-hadoop-jena/pom.xml
@@ -149,10 +149,18 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--
+                <dependency>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j-impl</artifactId>
+                    <scope>test</scope>
+                </dependency>
+        -->
 
         <!--
         <dependency>
