--- a/sansa-test-resources/src/main/resources/log4j.properties
+++ b/sansa-test-resources/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=info, stderr
+log4j.rootLogger=debug, stderr
 
 # Direct log messages to stderr
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
