Fixed build issue with latest jena change (TokenizerTextForgiving); Added initial selftest command to verify executable.

--- a/sansa-cmds-picocli/pom.xml
+++ b/sansa-cmds-picocli/pom.xml
@@ -92,6 +92,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.aksw.rmltk</groupId>
+            <artifactId>rml-resource-gtfs-madrid-bench-1</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
