--- a/sansa-spark-cli/pom.xml
+++ b/sansa-spark-cli/pom.xml
@@ -40,7 +40,59 @@
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
                     <artifactId>spark-sql${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-mapreduce-client-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sansa-stack</groupId>
+            <artifactId>sansa-query-spark${scala.version.suffix}</artifactId>
+            <!-- Issue: sansa-spark-jakarta bundles shaded spark+hadoop (with javax replaced by jakarta), but hadoop also comes from other sources -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-sql${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive${scala.version.suffix}</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-mapreduce-client-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -53,14 +105,10 @@
         </dependency>
 
         <dependency>
-            <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-query-spark${scala.version.suffix}</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
         <!--
         <dependency>
             <groupId>org.apache.spark</groupId>
