--- a/sansa-spark-cli/pom.xml
+++ b/sansa-spark-cli/pom.xml
@@ -13,12 +13,15 @@
     <artifactId>sansa-spark-cli_2.12</artifactId>
     <packaging>jar</packaging>
 
-    <!--
-        <properties>
-            <timestamp>${maven.build.timestamp}</timestamp>
-            <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-        </properties>
-    -->
+    <properties>
+            <!-- Jakarta -->
+        <jersey.version>3.1.3</jersey.version>
+
+        <!--
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>        
+        -->
+    </properties>
     <!--
         <build>
             <resources>
@@ -34,6 +37,14 @@
     -->
 
     <dependencies>
+        <dependency>
+            <groupId>org.glassfish.jersey</groupId>
+            <artifactId>jersey-bom</artifactId>
+            <version>${jersey.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+
         <dependency>
             <groupId>net.sansa-stack</groupId>
             <artifactId>sansa-cmds-picocli${scala.version.suffix}</artifactId>
