--- a/sansa-inference/sansa-inference-flink/pom.xml
+++ b/sansa-inference/sansa-inference-flink/pom.xml
@@ -34,7 +34,7 @@ under the License.
     <dependencies>
         <dependency>
             <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-inference-common_${scala.binary.version}</artifactId>
+            <artifactId>sansa-inference-common_2.12</artifactId>
         </dependency>
 
         <!-- RDF Layer -->
