--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -80,23 +80,23 @@
         -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <scala.version>2.12.18</scala.version>
-        <scala.binary.version>2.12</scala.binary.version>
+        <scala.version>2.13.15</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
         <scala.classifier>${scala.binary.version}</scala.classifier>
         <scala.version.suffix>_${scala.binary.version}</scala.version.suffix>
 
         <flink.version>1.11.2</flink.version>
-        <spark.version>3.5.3</spark.version>
+        <spark.version>4.0.0-preview2</spark.version>
 	<!-- <spark.version>4.0.0-preview2</spark.version> -->
         <derby.version>10.15.2.0</derby.version>
         <!-- Spark Testing isn't always in sync, so we have to check for latest version and adapt here -->
-        <spark.testing.version>3.0.1_1.0.0</spark.testing.version>
+        <spark.testing.version>4.0.0-preview2_2.0.1</spark.testing.version>
 
         <!-- Javax -->
-        <jersey.version>2.35</jersey.version>
+        <!-- <jersey.version>2.35</jersey.version> -->
         
         <!-- Jakarta -->
-        <!-- <jersey.version>3.1.3</jersey.version> -->
+        <jersey.version>3.1.3</jersey.version>
 
         <hadoop.version>3.4.0</hadoop.version>
         <!-- <hadoop.version>2.8.5</hadoop.version> -->
@@ -205,7 +205,7 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>4.8.1</version>
+                    <version>4.9.2</version>
                     <configuration>
                         <forceAggregate>true</forceAggregate>
                         <aggregateDirectOnly>false</aggregateDirectOnly>
@@ -231,8 +231,10 @@
                                     <arg>-feature</arg>
                                     <arg>-dependencyfile</arg>
                                     <arg>${project.build.directory}/.scala_dependencies</arg>
+				<!-- 
                                     <arg>-Xmax-classfile-name</arg>
                                     <arg>128</arg>
+-->
                                 </args>
                                 <jvmArgs>
                                     <jvmArg>-Xss10m</jvmArg>
@@ -775,25 +777,25 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-cmds-picocli${scala.version.suffix}</artifactId>
+                <artifactId>sansa-cmds-picocli_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>net.sansa-stack</groupId>
-                <artifactId>sansa-spark-jena-java${scala.version.suffix}</artifactId>
+                <artifactId>sansa-spark-jena-java_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>net.sansa-stack</groupId>
-                <artifactId>sansa-spark-jena-scala${scala.version.suffix}</artifactId>
+                <artifactId>sansa-spark-jena-scala_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>net.sansa-stack</groupId>
-                <artifactId>sansa-test-resources${scala.version.suffix}</artifactId>
+                <artifactId>sansa-test-resources_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -819,13 +821,13 @@
 
             <dependency>
                 <groupId>net.sansa-stack</groupId>
-                <artifactId>sansa-sabine${scala.version.suffix}</artifactId>
+                <artifactId>sansa-sabine_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-spark-cli${scala.version.suffix}</artifactId>
+                <artifactId>sansa-spark-cli_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -833,77 +835,89 @@
             <!-- RDF Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-rdf-common${scala.version.suffix}</artifactId>
+                <artifactId>sansa-rdf-common_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-rdf-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-rdf-spark_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-rdf-flink${scala.version.suffix}</artifactId>
+                <artifactId>sansa-rdf-flink_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- OWL Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-owl-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-owl-spark_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-owl-flink${scala.version.suffix}</artifactId>
+                <artifactId>sansa-owl-flink_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Query Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-query-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-query-spark_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-query-flink${scala.version.suffix}</artifactId>
+                <artifactId>sansa-query-tests_2.12</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sansa-query-flink_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Datalake Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-datalake-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-datalake-spark_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- Inference Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-inference-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-inference-common_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-inference-flink${scala.version.suffix}</artifactId>
+                <artifactId>sansa-inference-spark_2.12</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>sansa-inference-flink_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <!-- ML Layer -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-ml-spark${scala.version.suffix}</artifactId>
+                <artifactId>sansa-ml-spark_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>sansa-ml-flink${scala.version.suffix}</artifactId>
+                <artifactId>sansa-ml-flink_2.12</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -971,7 +985,7 @@
             <dependency>
                 <groupId>org.scala-lang.modules</groupId>
                 <artifactId>scala-xml${scala.version.suffix}</artifactId>
-                <version>1.0.5</version>
+                <version>2.3.0</version>
             </dependency>
 
             <!-- Miscellaneous -->
@@ -1808,12 +1822,12 @@
             <dependency>
                 <groupId>org.scala-graph</groupId>
                 <artifactId>graph-core${scala.version.suffix}</artifactId>
-                <version>1.12.5</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.scala-graph</groupId>
                 <artifactId>graph-dot${scala.version.suffix}</artifactId>
-                <version>1.11.5</version>
+                <version>2.0.0</version>
             </dependency>
             <dependency>
                 <groupId>org.jgrapht</groupId>
@@ -1999,7 +2013,7 @@
             <dependency>
                 <groupId>com.github.scopt</groupId>
                 <artifactId>scopt${scala.version.suffix}</artifactId>
-                <version>3.7.0</version>
+                <version>4.1.0</version>
             </dependency>
 
             <!-- Config API -->
@@ -2109,12 +2123,13 @@
                 <version>8.0.22</version>
             </dependency>
 
+<!--
             <dependency>
                 <groupId>com.ibm.sparktc</groupId>
-                <artifactId>spark-bench_2.12</artifactId>
+                <artifactId>spark-bench${scala.version.suffix}</artifactId>
                 <version>3.0.1_0.4.0-RELEASE</version>
             </dependency>
-
+-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-rdf-jena</artifactId>
