--- a/sansa-inference/sansa-inference-spark/pom.xml
+++ b/sansa-inference/sansa-inference-spark/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-inference-common_${scala.binary.version}</artifactId>
+            <artifactId>sansa-inference-common_2.12</artifactId>
         </dependency>
 
         <!--        <dependency>-->
@@ -25,13 +25,13 @@
         <!-- SANSA OWL -->
         <dependency>
             <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-owl-spark_${scala.binary.version}</artifactId>
+            <artifactId>sansa-owl-spark_2.12</artifactId>
         </dependency>
 
         <!-- RDF Layer -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-rdf-spark_${scala.binary.version}</artifactId>
+            <artifactId>sansa-rdf-spark_2.12</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.hadoop</groupId>
@@ -223,7 +223,7 @@
 
         <dependency>
             <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-inference-tests_${scala.binary.version}</artifactId>
+            <artifactId>sansa-inference-tests_2.12</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
