--- a/sansa-integration-tests/src/test/resources/log4j2.properties
+++ b/sansa-integration-tests/src/test/resources/log4j2.properties
@@ -7,5 +7,5 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss} %-5p %-15c{1} :: %m%n
 
-rootLogger.level = debug
+rootLogger.level = info
 rootLogger.appenderRef.stderr.ref = STDERR
