--- a/sansa-sabine/pom.xml
+++ b/sansa-sabine/pom.xml
@@ -18,11 +18,6 @@
 
         <dependency>
             <groupId>org.aksw.rmltk</groupId>
-            <artifactId>rml-jena-arq</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aksw.rmltk</groupId>
             <artifactId>rmlx-jena-api</artifactId>
         </dependency>
 
@@ -43,7 +38,7 @@
 
         <dependency>
             <groupId>net.sansa-stack</groupId>
-            <artifactId>sansa-test-resources${scala.version.suffix}</artifactId>
+            <artifactId>sansa-test-resources_2.12</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -112,12 +107,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-spark-jena-java${scala.version.suffix}</artifactId>
+            <artifactId>sansa-spark-jena-java_2.12</artifactId>
         </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>sansa-spark-jena-scala${scala.version.suffix}</artifactId>
+            <artifactId>sansa-spark-jena-scala_2.12</artifactId>
         </dependency>
 
         <!-- Spark dependencies -->
