Excluded hdt from plugins bundle

--- a/sansa-spark-jena-java/pom.xml
+++ b/sansa-spark-jena-java/pom.xml
@@ -103,6 +103,12 @@
         <dependency>
             <groupId>org.aksw.jenax</groupId>
             <artifactId>jenax-arq-plugins-bundle</artifactId>
+<exclusions>
+<exclusion>
+<groupId>org.aksw.jenax</groupId>
+<artifactId>jenax-arq-hdt</artifactId>
+</exclusion>
+</exclusions>
         </dependency>
 
         <!--
