--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -1056,6 +1056,18 @@
 
 
             <!-- jenax -->
+        <dependency>
+            <groupId>org.aksw.jenax</groupId>
+            <artifactId>jenax-arq-plugins-bundle</artifactId>
+                <version>${jenax.version}</version>
+<exclusions>                
+<exclusion>                 
+<groupId>org.aksw.jenax</groupId>
+<artifactId>jenax-arq-hdt</artifactId>
+</exclusion>                    
+</exclusions>               
+        </dependency>    
+
             <dependency>
                 <groupId>org.aksw.jenax</groupId>
                 <artifactId>jenax-bom</artifactId>
@@ -1063,6 +1075,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
 
 		<!-- Conflicts with hadoop on jakarta.xml.bind (jena uses version 4.x.x, hadoop 2.x.x) -->
 		<!--
