temporary disable examples and inference

--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,9 @@
         <module>sansa-sabine</module>
         <module>sansa-query</module>
         <module>sansa-owl</module>
-        <module>sansa-inference</module>
+        <!-- <module>sansa-inference</module> -->
         <module>sansa-ml</module>
-        <module>sansa-examples</module>
+        <!-- <module>sansa-examples</module> -->
         <module>sansa-integration-tests</module>
         <module>sansa-cmds-picocli</module>
         <module>sansa-spark-cli</module>
