--- a/sansa-spark-jena-java/pom.xml
+++ b/sansa-spark-jena-java/pom.xml
@@ -81,12 +81,12 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_${scala.binary.version}</artifactId>
+            <artifactId>spark-core${scala.version.suffix}</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${scala.binary.version}</artifactId>
+            <artifactId>spark-sql${scala.version.suffix}</artifactId>
         </dependency>
 
         <dependency>
