Added skip flag to scalastyle plugin - makes more issues than its worth for now

--- a/sansa-bom/pom.xml
+++ b/sansa-bom/pom.xml
@@ -701,6 +701,7 @@
                         <configLocation>${scalastyle.config.path}</configLocation>
                         <outputFile>${project.basedir}/scalastyle-output.xml</outputFile>
                         <outputEncoding>UTF-8</outputEncoding>
+			<skip>true</skip>
                     </configuration>
                     <executions>
                         <execution>
